--- a/mainProject/package.json
+++ b/mainProject/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
